# fast-api-test

./: 2025_02_08_1620-7d983f32e3e9_add_user_and_relations.py  Dockerfile  README.md  alembic.ini  app_router.py  database.py  docker-compose.yaml  docker-compose.yml  env.py  main.py  pyproject.toml  requirements.txt  test  vercel.json
.vercel/: project.json
app/: main.py
app/api/v1/: user_router.py
app/core/: settings.py
app/models/: enums.py  user.py
app/schemas/: user.py
app/services/: user.py
repositories/: user.py
v1/: __init__.py  app_router.py  user_router.py
