[project]
name = "tender-manager-back"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "email@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks.build-image]
help = "build image"
shell = "docker build -t tender-manager-back:latest ."

[tool.poe.tasks.build-image-mac]
help = "build image"
shell = "docker build --platform linux/amd64 -t tender-manager-back:latest ."

[tool.poe.tasks.run-container]
help = "Run container"
shell = "docker compose up -d"

[tool.poe.tasks.stop-container]
help = "Stop container"
shell = "docker compose down"

[tool.poe.tasks.db-upgrade]
help = "Run database migrations"
shell = "docker compose exec -e DB_PORT=$DB_PORT tender-manager-api poetry run alembic upgrade head"

[tool.poe.tasks.db-downgrade]
help = "Rollback most recent database migration"
shell = "docker compose exec -e DB_PORT=$DB_PORT tender-manager-api poetry run alembic downgrade -1"

[tool.poe.tasks.create-migration]
help = "Create a new database migration"
shell = """
docker compose exec -e DB_PORT=$DB_PORT -e MIGRATION_MESSAGE={message} tender-manager-api poetry run alembic revision --autogenerate -m "$MIGRATION_MESSAGE"
"""